Fix white background in messenger recipe dark mode (#494)

--- a/recipes/messenger/darkmode.css
+++ b/recipes/messenger/darkmode.css
@@ -13,6 +13,7 @@
   --hover-overlay: rgba(255, 255, 255, 0.05);
   --media-inner-border: rgba(255, 255, 255, 0.1);
   --messenger-card-background: #1e1e1e;
+  --mwp-message-row-background: #1e1e1e;
   --overlay-alpha-80: rgba(41, 41, 41, 0.8);
   --popover-background: #1e1e1e;
   --primary-icon: #cecece;
